animation, webp and things

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,7 +5,7 @@
     "description": "Refonte complète du site. Sa conception devait se faire nécessairement en JavaScript via React, avec Node.js pour le côté back-end. Le résultat devait être conforme aux maquettes fournies, en y ajoutant des animations",
     "skill": "Javascript, React, NodeJs, Sass",
     "github": "https://github.com/Dexxark/OC-P8",
-    "img": "img/project/Kasa.png"
+    "img": "img/project/Kasa.webp"
   },
   {
     "id": "2",
@@ -13,7 +13,7 @@
     "description": "Mise en place d'un système d'authentification d'utilisateur avec possibilité de modifier certaines de ces informations. De plus, avec l'aide de swagger, il était demander de créer d'éventuels endpoint pour de futurs besoin",
     "skill": "Javascript, Redux, React, MongoDb",
     "github": "https://github.com/Dexxark/OC-P11",
-    "img": "img/project/ArgentBank.png"
+    "img": "img/project/ArgentBank.webp"
   },
   {
     "id": "3",
@@ -21,7 +21,7 @@
     "description": "Débogage d'un site à l'aide de test unitaires. Il fallait reprendre le code d'un ancien développpeur pour terminer les fonctionnalités à implanter et corriger les erreurs. Mis en place d'un cahier de tests fonctionnels",
     "skill": "Javascript, React, Tests unitaires",
     "github": "https://github.com/Dexxark/OC-724Events",
-    "img": "img/project/724Events.png"
+    "img": "img/project/724Events.webp"
   },
   {
     "id": "4",
@@ -29,6 +29,6 @@
     "description": "Optimisation des performance d'un site, amélioration du référencement via les moteurs de recherche. Il était aussi nécessaire d'alléger les images en modifiant leur extension. Ajout de métas pour les réseaux sociaux.",
     "skill": "Javascript, Optimisation",
     "github": "https://github.com/Dexxark/OC-P9",
-    "img": "img/project/NinaCarducci.png"
+    "img": "img/project/NinaCarducci.webp"
   }
 ]
